--- a/src/ui/InsertScreen.fxml
+++ b/src/ui/InsertScreen.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<Pane fx:id="insert_pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" styleClass="pane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="orderpackage.InsertController">
+<Pane fx:id="insert_pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" styleClass="pane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.InsertController">
    <children>
       <Button fx:id="back_btn" layoutX="605.0" layoutY="445.0" mnemonicParsing="false" onAction="#back_to_index" prefHeight="25.0" prefWidth="81.0" styleClass="btn" text="Back" />
       <Label fx:id="result" layoutX="339.0" layoutY="399.0" />
