--- a/src/ui/LoginScreen.fxml
+++ b/src/ui/LoginScreen.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="orderpackage.LoginController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.LoginController">
    <children>
       <TextField fx:id="ip_address" layoutX="225.0" layoutY="119.0" promptText="Ex. 127.0.0.1" text="localhost" />
       <Button fx:id="login_btn" layoutX="274.0" layoutY="175.0" mnemonicParsing="false" onAction="#LoginToServer" text="Login" />
