--- a/src/ui/SearchScreen.fxml
+++ b/src/ui/SearchScreen.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" styleClass="pane" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="orderpackage.SearchOrderController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" styleClass="pane" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.SearchOrderController">
    <children>
       <Label fx:id="order_number_label" layoutX="471.0" layoutY="229.0" styleClass="lbl" text="Order Number" />
       <TextField fx:id="order_number_input" layoutX="578.0" layoutY="225.0" promptText="Ex. 12" />
