--- a/src/ui/UpdateScreen.fxml
+++ b/src/ui/UpdateScreen.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane id="changescreen" fx:id="update_pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="orderpackage.UpdateOrderController">
+<Pane id="changescreen" fx:id="update_pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.UpdateOrderController">
    <children>
       <TableView fx:id="OrderTable" layoutY="95.0" prefHeight="429.0" prefWidth="1280.0">
         <columns>
